Updated configuration for ELC 2019 YPDD
Updated to work with warrior, with some improvements and convenience
tweaks:
- Set PREFERRED_PROVIDER_virtual/kernel in schooner.conf to replace
  use of containerx86-64 machine definition
- host-app-container-lighttpd recipe added to package app container
  for host use
- container-host-image-multiconfig replaced with container-host-image
  derived from core-image-minimal
- added marina distribution configuration to define systemd based
  distribution

Signed-off-by: Scott Murray <scott.murray@konsulko.com>

--- a/README
+++ b/README
@@ -6,11 +6,11 @@ Dependencies
 ============
 
 URI: git://git.openembedded.org/openembedded-core
-branch: thud
+branch: warrior
 
 URI: git://git.yoctoproject.org/cgit/cgit.cgi/meta-yocto
 URI: git://git.yoctoproject.org/cgit/cgit.cgi/meta-yocto-bsp
-branch: thud
+branch: warrior
 
 Patches
 =======
@@ -35,7 +35,10 @@ Run 'bitbake-layers add-layer meta-container-demo'
 II. Misc
 ========
 
-Simple container demonstration recipes, content from ELCE 2018 presentation:
+Simple container demonstration recipes, originally based on content from
+ELCE 2018 presentation:
 
 https://elinux.org/images/6/62/Building-Container-Images-with-OpenEmbedded-and-the-Yocto-Project-Scott-Murray-Konsulko-Group-1.pdf
 https://youtu.be/OSyLoHYxGLQ
+
+Updated for Yocto Project Developer Day presentation at ELC 2019.
